[project]
name = "jovi_measure"
description = "Image metrics nodes for ComfyUI"
version = "1.0.5"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "numpy>=1.26.4,<2.0.0; python_version < '3.12'",
    "numpy>=2.0.0; python_version > '3.11'",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Measure"
Documentation = "https://github.com/Amorano/Jovi_Measure/wiki"
Repository = "https://github.com/Amorano/Jovi_Measure"
Issues = "https://github.com/Amorano/Jovi_Measure/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi_Measure"
Icon = "https://avatars.githubusercontent.com/u/225178?v=4"
