[project]
name = "jovi_measure"
description = "Image metrics nodes for ComfyUI"
version = "1.0.9"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "numpy<2",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Measure"
Documentation = "https://github.com/Amorano/Jovi_Measure/wiki"
Repository = "https://github.com/Amorano/Jovi_Measure"
Issues = "https://github.com/Amorano/Jovi_Measure/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Measure"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_measure.png"
